# opengl-cpp-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
shaders/: textureFragmentShader.glsl
src/: QuadMesh.cpp  QuadMesh.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  Texture2DRegion.cpp  Texture2DRegion.h  Window.cpp  Window.h  main.cpp  window.cpp  window.h
src/shaders/: textureFragmentShader.glsl
